module-3/istio/route-with-queryparams/color-frontend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: color-frontend
  labels:
    workload: color
spec:
  hosts:
  - "*"
  gateways:
  - color-gateway
  http:
  - match:
    - queryParams: # Support in 1.3.0
        dev:
          exact: "true"
    route:
    - destination:
        host: color-frontend
        subset: v2
        port:
          number: 80
  - route:
    - destination:
        host: color-frontend
        subset: v1
        port:
          number: 80
